Fix creating thumbnails for items under desktop:/

By using KFileItem::localPath() which will return url.toLocalFile()
or UDS_LOCAL_PATH, so it works for all URLS.

BUG: 438691
FIXED-IN: 5.85